--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Build
         run: |
-          dotnet publish
+          dotnet publish -a x64 -v d --no-self-contained
 
       - name: pack artifact
         run: |
