--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -22,10 +22,10 @@ jobs:
         run: |
           $releasePath = "./bin/Release/net8.0-windows/win-x64/publish"
 
-          Copy-Item "$releasePath/MyPic_Annotator.exe" "./MyPic_Annotator.exe" -Recurse -Force
+          Copy-Item "$releasePath/MyPic_Anoㄙtator.exe" "./MyPic_Anontator.exe" -Recurse -Force
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: Its-MyPic-Annotator
-          path: ./MyPic_Annotator.exe
+          name: Its-MyPic-Anontator
+          path: ./MyPic_Anontator.exe
